         interfaces and parent classes of resource classes.
         Reported and contributed by Shaun Elliott.
       - Relaxed content type header parsing in case of a trailing
         semicolon. Reported by Jean-Baptiste Dusseaut.
       - Fixed handling of Put requests with Jax-Rs extension without any 
         mime type. Reported by Thomas Mortagne.

- 2.0.11 (2012-01-25)
    - Bugs fixed
       - Fixed MediaType.includes(MediaType) which returned true with the
         other type was null. Reported by Try Lam.
       - Improved OData client speed by caching costly reflection calls,
         especially on Android. Contributed by Nikhil Purushe.
       - Fixed conversion bug with asynchronous annotated interfaces
         when a Result parameter is declared. Reported by Bill Claypool.
       - Fixed conversion of request entities by ClientResource using response 
         variants. Reported by Arjohn Kampman.
       - Fix the GWT edition, client requests using HTTP_BASIC authentication 
         scheme did not generate Authorization header.
         Reported by Koen Maes.

- 2.0.10 (2011-10-05)
    - Bugs fixed
       - RDF/XML writing wasn't properly factoring statements from the same
         source reference.
       - SaxRepresentation wasn't writing the wrapped SAX sources. Added
         logic to write(XmlWriter) method. Reported by Raif S. Naffah.
       - Fixed potential NPE in Adapter#getLogger() method.
         Reported by Avi Flax.
       - Removed unused namespaces declaration in RDF/n3 and Turtle writers.
       - Removed extra empty line generated by XmlWriter at the top of docs.
       - Lowered level of log messages in the internal connector when a 
         connection is broken from warning to fine as it could be the result
         of a simple SHIFT+F5 browser reload.
       - Exceptions while writing RDF were not properly traced, leading to
         hard to debug issues.
       - Fixed the DIGEST authentication, when reusing a valid digest 