@@ -75,7 +75,6 @@ public class ReferenceTestCase extends RestletTestCase {
         ref.setSchemeSpecificPart(DEFAULT_SCHEMEPART);
         return ref;
     }
-
     /**
      * Test addition methods.
      */
@@ -626,6 +625,28 @@ public class ReferenceTestCase extends RestletTestCase {
         part = "//www.restlet.net";
         ref.setSchemeSpecificPart(part);
         assertEquals(part, ref.getSchemeSpecificPart());
+    }
+
+    /**
+     * Test setting of the last segment.
+     */
+    public void testSetLastSegment(){
+        Reference ref = new Reference("http://localhost:1234");
+        ref.addSegment("test");
+        assertEquals("http://localhost:1234/test", ref.toString());
+        
+        ref.setLastSegment("last");
+        assertEquals("http://localhost:1234/last", ref.toString());
+        
+        ref = new Reference("http://localhost:1234");
+        ref.setLastSegment("last");
+        assertEquals("http://localhost:1234/last", ref.toString());
+
+        ref.setLastSegment("test");
+        assertEquals("http://localhost:1234/test", ref.toString());
+        
+        ref.addSegment("last");
+        assertEquals("http://localhost:1234/test/last", ref.toString());
     }
 
     /**
